fixed spacing around contact and order of menu bar

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -305,6 +305,7 @@ body {
 .contact {
     margin: auto;
     text-align: center;
+    padding: 25px 25px 25px 25px;
 }
 
 .contactPic {
